fixed overflow of advantage block

--- a/less/blocks/index/advantage.less
+++ b/less/blocks/index/advantage.less
@@ -136,6 +136,11 @@
 }
 
 @media @desktop-widths {
+  .advantage {
+    height: 256px;
+    overflow: hidden;
+  }
+
   .advantage__item {
     width: 33%;
   }
@@ -165,5 +170,9 @@
 
   .advantage__item--grey .advantage__title {
     padding: 0 80px;
+  }
+
+  .advantage__img {
+    height: 400px;
   }
 }
